# SlidersAndButtons

./: package-lock.json  package.json  tailwind.config.cjs
src/: App.svelte  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: background.rs  commands.rs  main.rs  serialization.rs
src-tauri/src/audio/: mod.rs  windows.rs
src/lib/: Logo.svelte  MainArea.svelte  Nav.svelte  SerialChooser.svelte
src/lib/MainArea/: AudioSessionChooser.svelte  Button.svelte  ComponentChooser.svelte  Grid.svelte  GridItem.svelte  ItemPopup.svelte  KeyChooser.svelte  Rotator.svelte  Slider.svelte  TempGridItem.svelte  types.ts
src/styles/: globals.scss
src/styles/config/: _config.scss  _util.scss
src/styles/font/: _Roboto.scss
