[package]
name = "buttons_and_sliders"
version = "0.0.0"
description = "A Tauri App"
authors = ["waayway"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serialport = { version = "4.2.0"}
directories = "4.0.1"
simulate = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
alsa-sys = "0.3.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
